Move dialog margin settings to polish event

Paint events MUST not change the state of things. This is especially
important within style code that is used in many apps that we do not
control.

Doing it in polish is better. It's still not ideal to adjust geometry in
the style, but at least this is where we have a similar hook for
QDockWidget so hopefully we know this pattern is acceptable.

BUG: 427311